--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
   "devDependencies": {
     "@types/fs-extra": "^8.1.0",
     "@types/node": "^13.13.5",
+    "@types/properties-reader": "0.0.2",
     "typescript": "^3.8.3"
   },
   "dependencies": {
-    "fs-extra": "^9.0.0"
+    "fs-extra": "^9.0.0",
+    "properties-reader": "^2.0.0"
   }
 }
