Fix bugs and add custom time interval between 2 game data request

--- a/env.properties
+++ b/env.properties
@@ -1,5 +1,8 @@
 # cg user id
 user.id=1114834
 # cgSession cookie value
-cgsession.cookie=b06bb52b-a8aa-486a-bee4-d94ce230a7b4
+cgsession.cookie=728daea6-b81c-4e3b-be4f-1e67348eb937
+# bot agent id
 player.agent.id=2874821
+# seconds between to game data request when generating all game data of a given bot agent id
+seconds.between.requests=5
